# litedb-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  lint.yml  publish.yml
mir_dump/: scratch_30.get_mut_or_self_test.-------.nll.0.mir  scratch_30.get_mut_or_self_test.-------.nll.0.regioncx.all.dot  scratch_30.get_mut_or_self_test.-------.renumber.0.mir  scratch_30.get_mut_or_self_test.001-000.built.after.mir  scratch_30.get_mut_or_self_test.001-004.SimplifyCfg-initial.after.mir  scratch_30.get_mut_or_self_test.001-004.SimplifyCfg-initial.before.mir  scratch_30.get_mut_or_self_test.001-006.PromoteTemps.after.mir  scratch_30.get_mut_or_self_test.001-006.PromoteTemps.before.mir  scratch_30.get_mut_or_self_test.001-007.SimplifyCfg-promote-consts.after.mir  scratch_30.get_mut_or_self_test.001-007.SimplifyCfg-promote-consts.before.mir  scratch_30.get_mut_or_self_test.002-000.analysis.after.mir  scratch_30.get_mut_or_self_test.002-001.CleanupPostBorrowck.after.mir  scratch_30.get_mut_or_self_test.002-001.CleanupPostBorrowck.before.mir  scratch_30.get_mut_or_self_test.002-002.RemoveNoopLandingPads.after.mir  scratch_30.get_mut_or_self_test.002-002.RemoveNoopLandingPads.before.mir  scratch_30.get_mut_or_self_test.002-003.SimplifyCfg-post-analysis.after.mir  scratch_30.get_mut_or_self_test.002-003.SimplifyCfg-post-analysis.before.mir  scratch_30.get_mut_or_self_test.002-004.Derefer.after.mir  scratch_30.get_mut_or_self_test.002-004.Derefer.before.mir  scratch_30.get_mut_or_self_test.003-000.analysis-post-cleanup.after.mir  scratch_30.get_mut_or_self_test.003-001.AddCallGuards.after.mir  scratch_30.get_mut_or_self_test.003-001.AddCallGuards.before.mir  scratch_30.get_mut_or_self_test.003-002.PostAnalysisNormalize.after.mir  scratch_30.get_mut_or_self_test.003-002.PostAnalysisNormalize.before.mir  scratch_30.get_mut_or_self_test.003-003.Subtyper.after.mir  scratch_30.get_mut_or_self_test.003-003.Subtyper.before.mir  scratch_30.get_mut_or_self_test.003-004.ElaborateDrops.after.mir  scratch_30.get_mut_or_self_test.003-004.ElaborateDrops.before.mir  scratch_30.get_mut_or_self_test.003-005.AbortUnwindingCalls.after.mir  scratch_30.get_mut_or_self_test.003-005.AbortUnwindingCalls.before.mir  scratch_30.get_mut_or_self_test.003-006.AddMovesForPackedDrops.after.mir  scratch_30.get_mut_or_self_test.003-006.AddMovesForPackedDrops.before.mir  scratch_30.get_mut_or_self_test.003-007.ElaborateBoxDerefs.after.mir  scratch_30.get_mut_or_self_test.003-007.ElaborateBoxDerefs.before.mir  scratch_30.get_mut_or_self_test.003-008.StateTransform.after.mir  scratch_30.get_mut_or_self_test.003-008.StateTransform.before.mir  scratch_30.get_mut_or_self_test.004-000.runtime.after.mir  scratch_30.get_mut_or_self_test.004-001.LowerIntrinsics.after.mir  scratch_30.get_mut_or_self_test.004-001.LowerIntrinsics.before.mir  scratch_30.get_mut_or_self_test.004-002.RemovePlaceMention.after.mir  (+139 more)
src/: bson.rs  buffer_reader.rs  buffer_writer.rs  constants.rs  file_io.rs  lib.rs  shared_mutex.rs  tokio_fs.rs  utils.rs
src/bson/: array.rs  de.rs  (+9 more)
tests/: file_io.rs  issue_5.liteDb  issue_5.rs  issue_8.liteDb  issue_8.rs  test_run.rs  vcc.liteDb
(+66 files in other folders)
