[package]
name = "vrc-get-litedb"
version = "0.3.0"
edition = "2024"

[dependencies]
async-lock = "3.4.0"
async-stream = "0.3.6"
either = "1.13.0"
futures = "0.3.31"
itertools = "0.14.0"
opool = "0.1.1"
tokio = { version = "1.43.0", features = ["fs"], optional = true }
tokio-util = { version = "0.7.13", features = ["compat"], optional = true }
typed-arena = "2.0.2"
unicode-properties = "0.1.3"
rand = "0.9.0"
base64 = "0.22.1"
hex = "0.4.3"

[dev-dependencies]
time = { version = "0.3.37", features = ["macros"] }
tokio = { version = "1.43.0", features = ["rt-multi-thread", "macros", "fs"] }

[features]
default = ['expression-methods']
debug-logs = []
tokio-fs = ['dep:tokio', 'dep:tokio-util']
# This feature enables support for methods of expression
# even without this feature, ITEMS / ARRAY method is avaiable since it's 
# part of builtin (some expression uses them)
expression-methods = []
sequential-index = []
