[package]
name = "vrc-get-litedb"
version = "0.3.0-beta.4"
edition = "2024"
license = "MIT"
authors = [
    "anatawa12 <anatawa12@icloud.com>",
    "Mauricio David <mauricio.david@gmail.com>"
]
readme = "README.md"
description = "A Rust reimplementation of LiteDB made for vrc-get."
keywords = ["litedb"]
categories = ["database"]

[dependencies]
async-lock = "3.4.0"
async-stream = "0.3.6"
either = "1.13.0"
futures = "0.3.31"
itertools = "0.14.0"
opool = "0.1.1"
tokio = { version = "1.43.0", features = ["fs"], optional = true }
tokio-util = { version = "0.7.13", features = ["compat"], optional = true }
typed-arena = "2.0.2"
unicode-properties = "0.1.3"
rand = "0.9.0"
base64 = "0.22.1"
hex = "0.4.3"
thread_local = "1.1.8"
indexmap = "2.7.1"

[target."cfg(windows)".dependencies]
windows = { version = "0.60.0", features = [
    'Win32_Foundation',
    'Win32_System_Threading',
    'Win32_Security',
    'Win32_System_SystemServices',
] }

[dev-dependencies]
time = { version = "0.3.37", features = ["macros"] }
tokio = { version = "1.43.0", features = ["rt-multi-thread", "macros", "fs"] }

[features]
default = ['expression-methods', 'shared-mutex']
debug-logs = []
tokio-fs = ['dep:tokio', 'dep:tokio-util']
shared-mutex = [ 'dep:tokio', 'tokio/rt' ]
# This feature enables support for methods of expression
# even without this feature, ITEMS / ARRAY method is avaiable since it's 
# part of builtin (some expression uses them)
expression-methods = []
sequential-index = []
